--- a/Estudos Unit 5/style.css
+++ b/Estudos Unit 5/style.css
@@ -30,7 +30,7 @@ body {
 }
 
 .container {
-    background-color: #FA553B;
+    /*background-color: #FA553B;*/
     overflow: auto;
 }
 
@@ -72,10 +72,6 @@ body {
     padding: 10px;
     margin-top: 7px;
     text-align: center;
-    clear: both;
-    position: relative;
-    height: 40px;
-    margin-top: -200px;
 }
 
 @media only screen and (max-width: 620px) {
@@ -83,14 +79,3 @@ body {
         width: 100%;
  }
 }
-
-/*.footer {
-    background-color: #FA553B;
-    padding: 10px;
-    margin-top: 7px;
-    text-align: center;
-    clear: both;
-    position: relative;
-    height: 40px;
-    margin-top: -200px;
-}*/
