--- a/Projeto Unit 5/style.css
+++ b/Projeto Unit 5/style.css
@@ -1,13 +1,7 @@
-.imgC {
-    display: block;
-    margin: auto;
-    width: 40%;
-}
-
 .imgCG {
     display: block;
     margin: auto;
-    width: 100%;
+    width: 80%;
 }
 
 .txtC {
@@ -59,12 +53,6 @@ h2 {
     text-decoration: underline;
 }
 
-.fort {
-    text-decoration: #000000 underline 2px;
-    font-size: 20px;
-    text-transform: uppercase;
-}
-
 a:hover  {
     color:#FEB71E;
 }
@@ -72,30 +60,25 @@ a:hover  {
 .bP {
     background-color: #c08457;
     border: 2px solid #000000;
-    border-radius: 5px;
-    margin: auto;
-    text-align:justify;  
+    border-radius: 4px;
+    margin: 10px 5px 5px 5px;
+    text-align: left;  
 }
 
 table{
     table-layout: fixed;
     border: 4px solid black;
     border-collapse: collapse;
-    width: 100%    
+    width: 100%  
 }
 
 th, td {
-    border: 2px solid black;
+    border: 4px solid black;
 }
 
 .highlight {
     font-weight: bold;
     background-color:#FEB71E
-}
-
-.highlight1 {
-    font-weight: bold;
-    background-color:#c08457;
 }
 
 .banner {
@@ -114,18 +97,24 @@ th, td {
     padding: 0px 20px;
 }
 
-/* Arthur */
-.containerImagemLink {
+.container {
+    overflow: auto;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100%;
 }
 
-.imagemLink {
-    width: 50%;
+.imgTxt {
+    max-width:30%;
+    max-height: 20%;
+    float: left;
+    margin-top: 7px;
 }
 
-.imagemLink img {
-    width: 100%;
+.footer {
+    background-color:#c08457;
+    padding: 5px;
+    margin-top: 10px;
 }
+
+
